--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,14 +1,22 @@
+---
+import NavBar from "../components/NavBar.astro"
+import Footer from "../components/Footer.astro"
+---
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta name="generator" content="Svitlo Bot settings" />
+		<title>Svitlo Bot</title>
 	</head>
 	<body>
-		<slot />
+		<main>
+			<NavBar />
+			<slot />
+			<Footer />
+		</main>
 	</body>
 </html>
 
