--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -18,7 +18,7 @@ import Layout from '../layouts/Layout.astro';
           >
             Sign in to your account
           </h1>
-          <form class="space-y-4 md:space-y-6" action="#" id="signin-form">
+          <form class="space-y-4 md:space-y-6" action="#" id="signin-form" method="POST">
             <div>
               <label
                 for="email"
@@ -51,6 +51,7 @@ import Layout from '../layouts/Layout.astro';
             </div>
 
             <button
+             id="signin-form button"
               type="submit"
               class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
               >Sign in</button
@@ -74,6 +75,7 @@ import Layout from '../layouts/Layout.astro';
   import Validator from "validator.tool";
   import { auth } from "@scripts/firebase/init";
   import { authClientValidationRules } from "@scripts/authClientValidationRules";
+  import { FirebaseError } from "firebase/app";
 
   type FormValues = {
     email?: string;
@@ -120,9 +122,17 @@ import Layout from '../layouts/Layout.astro';
 
         const token = await user.getIdToken();
         window.location.href = `/?token=${token}`;
-      } catch (error) {
+      } catch (error: unknown) {
         submitButton.innerText = "Signin";
         submitButton.disabled = false;
+
+        if (error instanceof FirebaseError) {
+          const errorMessage = error.message.includes('user-not-found')
+            ? 'User not found. Please sign up'
+            : error.message;
+
+          return alert(errorMessage);
+        }
 
         alert(error);
       }
