feat: add styles

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,6 +1,6 @@
 <a
   href="/"
-  class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
+  class="text-2xl font-semibold text-gray-900 dark:text-white hover:text-primary-600 dark:hover:text-primary-400 transition-colors"
 >
   Svitlo Bot.
 </a>
