--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -9,10 +9,10 @@ const { id = "", class: classnames } = Astro.props;
 
 <button
   class:list={[
-    "text-white bg-blue-700 hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800",
+    "text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-base px-5 py-2.5 text-center mr-2 mb-2 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800",
     classnames,
   ]}
   {...id ? { id: id } : {}}
 >
-  <slot /></button
->
+  <slot />
+</button>
