feat: add sign-up link to the signin page

--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -49,6 +49,9 @@ import Layout from '../layouts/Layout.astro';
           Sign in
         </button>
       </form>
+      <p class="text-sm text-gray-500 dark:text-gray-400 text-center">
+        Don't have an account? <a href="/signup" class="text-primary-600 dark:text-primary-400 hover:underline">Sign up</a>
+      </p>
     </div>
   </div>
 </Layout>
