--- a/src/pages/contact-lists.astro
+++ b/src/pages/contact-lists.astro
@@ -63,6 +63,15 @@ try {
           class="rounded-md border border-gray-300 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
         />
       </div>
+      <div class="flex flex-col">
+        <label for="portNumber" class="text-sm font-medium text-gray-700 mb-2">Port Number</label>
+        <input 
+          type="text" 
+          id="portNumber" 
+          name="portNumber" 
+          class="rounded-md border border-gray-300 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+        />
+      </div>
       <button 
         type="submit"
         class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition-colors duration-200"
@@ -70,13 +79,36 @@ try {
         Save changes
       </button>   
     </form>
+    <p class="mt-4 ">
+      <button id="deleteContacts" class="bg-red-600 text-white px-6 py-2 rounded-md hover:bg-red-700 transition-colors duration-200">Delete all logs and contacts</button>
+    </p>
   </div>
   <script>
     import { baseUrl } from "@constants/api";
 
-    const ipOrUrlInput = document.getElementById('ipOrUrl') as HTMLInputElement;
-    const webhookUrlInput = document.getElementById('webhookUrl') as HTMLInputElement;
+    const ipOrUrlInput = document.querySelector('#ipOrUrl') as HTMLInputElement;
+    const portNumberInput = document.querySelector('#portNumber') as HTMLInputElement;
+    const webhookUrlInput = document.querySelector('#webhookUrl') as HTMLInputElement;
     const saveButton = document.querySelector('button[type="submit"]') as HTMLButtonElement;
+
+    const deleteContacts = document.querySelector('#deleteContacts') as HTMLButtonElement;
+
+    if (deleteContacts) {
+      deleteContacts.addEventListener('click', async () => {
+        try {
+          deleteContacts.innerText = 'Deleting...'
+          deleteContacts.disabled = true;
+          await  fetch(`${baseUrl}/delete-all-monitors`, {
+            method: 'DELETE',
+          })
+        } catch (error) {
+          console.error('Error deleting monitor(s)', error);
+        } finally {
+          deleteContacts.innerText = 'Delete all logs and contacts'
+          deleteContacts.disabled = false;
+        }
+      })
+    }
 
     if (saveButton && ipOrUrlInput && webhookUrlInput) {
 
@@ -95,6 +127,7 @@ try {
           body: JSON.stringify({
             ipOrUrl: ipOrUrlInput.value,
             webhookUrl: webhookUrlInput.value,
+            portNumber: portNumberInput.value,
           })
         })
 
