feat: add sign-in prompt to signup page

--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -47,6 +47,7 @@ import Layout from "../layouts/Layout.astro";
           Sign up
         </button>
       </form>
+      <p class="text-sm text-gray-500 dark:text-gray-400 text-center">Already have an account? <a href="/signin" class="text-primary-600 dark:text-primary-400 hover:underline">Sign in</a>
     </div>
   </div>
 </Layout>
